--- a/src/main/resources/static/stylesheets/styles.css
+++ b/src/main/resources/static/stylesheets/styles.css
@@ -65,8 +65,8 @@ body {
 }
 
 .btn-primary {
-  background-color: #ffcc4d !important;
-  border: 1px solid #ffcc4d !important;
+  background-color: #d19f1f !important;
+  border: 1px solid #d19f1f !important;
 }
 
 .btn-secondary {
