--- a/src/main/resources/templates/admin/pruebas/agregar_prueba.html
+++ b/src/main/resources/templates/admin/pruebas/agregar_prueba.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta Arrupe</title>
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -208,7 +209,6 @@
     </main>
 
     <script>
-      // let idLeccion = document.getElementById("leccionPrueba").value;
       let preguntaCounter = 1;
       let idPrueba = null;
 
@@ -309,7 +309,6 @@
           };
 
           try {
-            // POST to add the Prueba
             const pruebaResponse = await fetch(
               "http://localhost:8085/arrupe/sv/arrupe/prueba/agregar",
               {
@@ -323,7 +322,6 @@
 
             const pruebaResult = await pruebaResponse.json();
 
-            // GET the last Prueba ID
             const pruebasResponse = await fetch(
               "http://localhost:8085/arrupe/sv/arrupe/prueba"
             );
@@ -333,7 +331,6 @@
 
             console.log("Última Prueba ID:", idPrueba);
 
-            // Function to post each pregunta sequentially
             for (let i = 1; i <= preguntaCounter; i++) {
               const nombrePregunta = document.getElementById(
                 `pregunta${i}`
@@ -362,7 +359,6 @@
 
               console.log(`Pregunta N°${i} agregada exitosamente`);
 
-              // GET preguntas and get the last added pregunta
               const preguntasResponse = await fetch(
                 "http://localhost:8085/arrupe/sv/arrupe/preguntas"
               );
@@ -372,12 +368,10 @@
 
               console.log(`Última Pregunta ID: ${idPregunta}`);
 
-              // Get the correct answer for this question
               const correctAnswer = document.getElementById(
                 `respuestaCorrectaPregunta${i}`
               ).value;
 
-              // Add responses for each question
               for (let j = 1; j <= 4; j++) {
                 const respuesta = document.getElementById(
                   `respuestaPregunta${i}_${j}`
