--- a/src/main/resources/templates/admin/usuarios/vista_usuarios.html
+++ b/src/main/resources/templates/admin/usuarios/vista_usuarios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta Arrupe</title>
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -118,6 +119,11 @@
                   class="btn btn-secondary btn-sm mx-2"
                   th:href="@{'/detalle-usuario/' + ${usuario.id}}"
                   >Ver Detalles</a
+                >
+                <a
+                  class="btn btn-secondary btn-sm mx-2"
+                  th:href="@{'/estado-usuario-admin/' + ${usuario.id}}"
+                  >Cambiar Estado</a
                 >
                 <a
                   class="btn btn-secondary btn-sm mx-2"
