--- a/src/main/resources/templates/err/auth-error.html
+++ b/src/main/resources/templates/err/auth-error.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta Arrupe</title>
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,9 +28,9 @@
   <body class="mb-4">
     <!-- Header -->
     <header class="sticky-top">
-      <nav class="navbar bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="/">
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
             <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
         </div>
@@ -30,13 +38,21 @@
     </header>
     <main class="container pt-4">
       <div class="row text-center text-light">
-        <h1 class="fs-1 rowdies-regular mb-2">Error :(</h1>
-        <hr />
-        <div class="fst-italic fs-6">
-          Número de carné o contraseña incorrecta.
-          <a class="text-light" href="/ingresar">Intenta de nuevo</a>.
+        <h1 class="rowdies-regular mb-3" style="font-size: 160px !important">
+          Oops!
+        </h1>
+        <h5 class="mb-3">Número de Carné o Contraseña Incorrectas</h5>
+        <div class="text-center mb-3">
+          <button class="btn btn-primary btn-sm px-5 py-2" onclick="regresar()">
+            Regresar
+          </button>
         </div>
       </div>
     </main>
+    <script>
+      function regresar() {
+        location.href = "/ingreso";
+      }
+    </script>
   </body>
 </html>
