--- a/src/main/resources/templates/estudiante/estudiante_portal.html
+++ b/src/main/resources/templates/estudiante/estudiante_portal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta Arrupe</title>
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -112,7 +113,9 @@
           <h5
             class="card-title text-center pt-3 pb-2 rowdies-regular fs-4 text-light"
           >
-            Mi bitácora de vuelo
+            <a href="/bitacora-vuelo" class="text-decoration-none text-light"
+              >Mi bitácora de vuelo <i class="fa-solid fa-arrow-right px-1"></i
+            ></a>
           </h5>
           <div class="mb-2 small text-light text-center">
             ¡Muchos Éxitos, tú puedes!
