--- a/src/main/resources/templates/estudiante/pruebas/vista_prueba.html
+++ b/src/main/resources/templates/estudiante/pruebas/vista_prueba.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta Arrupe</title>
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -236,7 +237,7 @@
           const raw = JSON.stringify({
             prueba: idPrueba,
             usuario: idUsuario,
-            puntaje: (score / totalQuestions) * 10,
+            puntaje: (score / totalQuestions) * 100,
           });
 
           const requestOptions = {
