--- a/src/main/resources/templates/ingreso.html
+++ b/src/main/resources/templates/ingreso.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planeta Arrupe</title>
+    <link rel="shortcut icon" href="/images/icono.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -74,9 +75,7 @@
                 />
               </div>
               <div class="mb-3 pt-3 d-grid gap-2">
-                <button class="btn btn-primary text-dark btn-sm">
-                  Ingresar
-                </button>
+                <button class="btn btn-primary btn-sm">Ingresar</button>
               </div>
             </form>
           </div>
